--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,8 +24,8 @@
         <div class="app-container">
             <header class="header">
                 <h1 class="title">
-                    <span class="cosmic">COSMIC</span>
-                    <span class="hunter">HUNTER</span>
+                    <span class="cosmic">Exo</span>
+                    <span class="hunter">Vista</span>
                 </h1>
                 <p class="subtitle">AI-Powered Exoplanet Detection System</p>
             </header>
